[package]
name = "swap"
version = "0.0.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swap"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
test-sbf = []
anchor-debug = []
custom-panic = []
custom-heap = []

[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
anchor-spl = { version = "0.31.1", features = ["metadata"]}

[dev-dependencies]
mollusk-svm = "=0.0.15"
solana-program = "~2.1"

